--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "surfjournal",
+    "name": "SurfJournal",
     "slug": "surfjournal",
     "owner": "wschurman",
     "version": "1.0.0",
@@ -24,7 +24,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.wschurman.surfjournal"
     },
     "web": {
       "favicon": "./assets/favicon.png"
