--- a/app.json
+++ b/app.json
@@ -25,7 +25,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "com.wschurman.surfjournal"
+      "package": "com.wschurman.surfjournal",
+      "permissions": []
     },
     "web": {
       "favicon": "./assets/favicon.png"
